--- a/mod-iamx/index.html
+++ b/mod-iamx/index.html
@@ -82,10 +82,10 @@
                 <img src="assets/images/myphoto.jpg" alt="">
               </div>
               <ul>
-                <li><strong>Date of birth:</strong> 05 Dec 1993</li>
-                <li><strong>Nationality:</strong> American</li>
-                <li><strong>Height:</strong> 175</li>
-                <li><strong>Weight:</strong> 72</li>
+                <li><strong>Date of birth:</strong> 03 Oct 1981</li>
+                <li><strong>Nationality:</strong> Sweden</li>
+                <li><strong>Height:</strong> 195</li>
+                <li><strong>Weight:</strong> 95</li>
               </ul>
             </div>
           </div> <!-- col-md-4 -->
@@ -106,18 +106,18 @@
                         <ul class="timeline">
                             <li class="timeline-inverted">
                                 <div class="posted-date">
-                                  <span class="month">2011-2013</span>
+                                  <span class="month">2016-2018</span>
                                 </div><!-- /posted-date -->
 
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
-                                            <h3>Junior ui designer</h3>
-                                            <span>XYZ Design Home, One Street, Boston</span>
+                                            <h3>Manchester United</h3>
+                                            <span></span>
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
-                                            <p>I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend.</p>
+                                            <p>On 1 July 2016, Ibrahimović signed as a free agent for Manchester United on a one-year contract, which had the option of being extended depending on his performance for the club. His salary was reported to be £200,000 per week.</p>
                                         </div><!-- /timeline-body -->
                                     </div> <!-- /timeline-content -->
                                 </div> <!-- /timeline-panel -->
@@ -125,22 +125,41 @@
 
                             <li>
                                 <div class="posted-date">
-                                  <span class="month">2013-2015</span>
+                                  <span class="month">2018-2019</span>
                                 </div><!-- /posted-date -->
 
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
-                                            <h3>Lead UX Consultant</h3>
-                                            <span>Lucky8 Designing Firm, California</span>
+                                            <h3>LA Galaxy</h3>
+                                            <span></span>
                                         </div><!-- /timeline-heading -->
 
                                         <div class="timeline-body">
-                                            <p>Completely provide access to seamless manufactured products before functionalized synergy. Progressively redefine competitive.</p>
+                                            <p>On 23 March 2018, Ibrahimović signed for Major League Soccer (MLS) club LA Galaxy. He announced his arrival in idiosyncratic style by taking out a signed full-page advertisement in the Los Angeles Times that simply said, "Dear Los Angeles, you're welcome".</p>
                                         </div><!-- /timeline-body -->
                                     </div> <!-- /timeline-content -->
                                 </div><!-- /timeline-panel -->
                             </li>
+
+                            <li>
+                              <div class="posted-date">
+                                <span class="month">2019-2021</span>
+                              </div><!-- /posted-date -->
+
+                              <div class="timeline-panel wow fadeInUp">
+                                  <div class="timeline-content">
+                                      <div class="timeline-heading">
+                                          <h3>Milan</h3>
+                                          <span></span>
+                                      </div><!-- /timeline-heading -->
+
+                                      <div class="timeline-body">
+                                          <p>On 17 September 2020, Ibrahimović scored Milan's first goal of the 2020–21 season in a 2–0 away win over Shamrock Rovers in the second qualifying round of the Europa League. Four days later, he scored a brace in Milan's opening match of the Serie A season, a 2–0 home win over Bologna. After missing three games recovering from COVID-19, Ibrahimović returned in the Derby della Madonnina on 17 October, scoring twice in three minutes as Milan defeated Inter 2–1. He scored his third consecutive brace in the league in a 3–3 home draw to Roma on 26 October. On 22 November, Ibrahimović again scored twice in a 3–1 away win over Napoli, which was also his eighth consecutive league appearance with at least one goal. However, he also suffered a hamstring injury and had to be substituted.</p>
+                                      </div><!-- /timeline-body -->
+                                  </div> <!-- /timeline-content -->
+                              </div><!-- /timeline-panel -->
+                          </li>
                         </ul>
                     </div>
                 </div>
