--- a/mod-iamx/index.html
+++ b/mod-iamx/index.html
@@ -175,50 +175,50 @@
 
         <div class="row more-skill text-center">
           <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="91" data-color="e74c3c">
+              <div class="chart" data-percent="58" data-color="e74c3c">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>leadership</span>
+                      <span>Pace</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="23" data-color="2ecc71">
+              <div class="chart" data-percent="90" data-color="2ecc71">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Creativity</span>
+                      <span>Shooting</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="80" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Management</span>
+                      <span>Passing</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="81" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Branding</span>
+                      <span>Dribbling</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="36" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Marketing</span>
+                      <span>Defense</span>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="68" data-color="3498db">
+              <div class="chart" data-percent="80" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>Motivation</span>
+                      <span>Physical</span>
                     </div>
                 </div>
             </div>
