--- a/mod-iamx/index.html
+++ b/mod-iamx/index.html
@@ -236,23 +236,23 @@
             <div class="col-md-12">
               <div class="count-wrap">
                 <div class="col-sm-3 col-xs-6">
-                  <i class="fa fa-flask"></i>
-                  <h3 class="timer">7</h3>
-                  <p>Years of Experience</p>
+                  <i class="fa fa-life-ring"></i>
+                  <h3 class="timer">570</h3>
+                  <p>Total goals</p>
                 </div>
                 <div class="col-sm-3 col-xs-6"> 
                   <i class="fa fa-thumbs-up"></i>
-                  <h3 class="timer">651</h3>                
-                  <p>Projects Done</p>
+                  <h3 class="timer">500</h3>                
+                  <p>Club Total goals</p>
                 </div>
                 <div class="col-sm-3 col-xs-6">
-                  <i class="fa fa-users"></i>
-                  <h3 class="timer">251</h3> 
-                  <p>Happy Clients</p>
+                  <i class="fa fa-money"></i>
+                  <h3 class="timer">190</h3> 
+                  <p>Net Worth (Million)</p>
                 </div>
                 <div class="col-sm-3 col-xs-6">
                   <i class="fa fa-trophy"></i>
-                  <h3 class="timer">5</h3> 
+                  <h3 class="timer">31</h3> 
                   <p>Awards Won</p>
                 </div>
               </div><!-- /count-wrap -->
