--- a/mod-iamx/index.html
+++ b/mod-iamx/index.html
@@ -79,7 +79,7 @@
           <div class="col-md-4 col-md-push-4">
             <div class="biography">
               <div class="myphoto">
-                <img src="assets/images/myphoto.jpg" alt="">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Zlatan_Ibrahimovi%C4%87_June_2018.jpg" alt="">
               </div>
               <ul>
                 <li><strong>Date of birth:</strong> 03 Oct 1981</li>
